--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -34,7 +34,13 @@
         <view class="title-container">
           <text class="userinfo-nickname">{{userInfo.nickName}}</text>
           <text class="userinfo-sentence">买到票了吗？</text>
-          </view>
+        </view>
+
+        <!-- 重置按钮 -->
+        <view class="reset-button-area">
+          <image class="trash-button" src="../../images/index/trash.png" catchtap="resetButtonClick" ></image>
+        </view>
+
       </view>
       
       
@@ -60,7 +66,7 @@
           <wxs src="../../wxs/index/tickets.wxs" module="tickets"></wxs>
           <view class="mb20 userinfo-sentence">已购{{randomSeatsCount}}张票</view>
 
-          <view class="ticket white-bg" wx:for="{{randomSeatsArr}}" wx:key="key">
+          <view wx:for="{{randomSeatsArr}}" wx:key="key" class="ticket white-bg {{tickets.getColor(item)}}">
             <text>{{tickets.getPositionByNumber(item).section}}区第{{tickets.getPositionByNumber(item).row}}排{{tickets.getPositionByNumber(item).column}}座</text>
           </view>
         </view>
